# netzooe_eservice

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  hacs.json  pyproject.toml
.github/actions/setup-project/: action.yml
.github/workflows/: ci.yml  security.yml
config/: configuration.yaml
custom_components/netzooe_eservice/: __init__.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  sensor.py  strings.json
custom_components/netzooe_eservice/translations/: de.json  en.json
scripts/: develop.sh
tests/: __init__.py  api_data.py  conftest.py  test_config_flow.py  test_coordinator.py  test_init.py  test_sensor.py
tests/snapshots/: test_init.ambr  test_sensor.ambr
